--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,53 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Seth Lussueki</title>
     <link rel="stylesheet" href="/style/style.css">
     <style>
-        h1{
+        h1 {
             font-weight: bold;
         }
-        center{
+
+        center {
             font-size: 20px;
             margin: 2%;
         }
     </style>
 </head>
+
 <body>
     <nav>
-        <img src="/static/prism.png" alt="" class="logo">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Experience</a>
-        <a href="#">Contact</a>
+        <img src="#" alt="logotipo" class="logo">
+        <div class="link">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Experience</a>
+            <a href="#">Contacto</a>
+        </div>
         <audio id="audio" src="/static/tecnologia.m4a"></audio>
     </nav>
     <header>
-        <div class="welcome" >
-            <h1 id="welcome" ></h1>
+        <div class="welcome">
+            <h1 id="welcome"></h1>
+            <div class="contato">
+                <a href="#">Facebook</a>
+                <a href="#">Whatsapp</a>
+                <a href="#">Git Hub</a>
+            </div>
         </div>
         <img class="imagePerfil" src="/static/programmer1.png" alt="">
     </header>
     <div>
         <center>Scrolla para ver mais</center>
     </div>
-    <section class="servico">
-        <div class="caixa1">
-            <h2>Marketing</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, hic iste animi ex quas itaque quasi maiores vitae modi consequuntur id dicta voluptate aliquam! Recusandae veritatis ullam minima ipsam tenetur!</p>
-        </div>
-        <div class="caixa2">
-            <h2>Programação</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, distinctio praesentium reiciendis animi ipsum soluta ex alias error, enim fugiat tempore pariatur temporibus. Quaerat porro ipsum laboriosam provident. Dolorem, ipsum?</p>
-        </div>
-        <div class="caixa3">
-            <h2>Programação</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit modi itaque ipsam vitae rem tenetur voluptatibus eligendi officiis ea, facere repellat velit atque veniam unde alias quod tempora laudantium odit?</p>
+    <section class="sectionSkill">
+        <h2>Skills</h2>
+        <div class="skills">
+            <div>Html</div>
+            <div>Css</div>
+            <div style="background-color:yellow;color:#222; " >JS</div>
+            <div>React Native</div>
+            <div>Arduino</div>
+            <div>Python</div>
         </div>
     </section>
-    <footer></footer>
-    <script src="/script/script.js" ></script>
+
+    <section class="sectionProject">
+        <h2>Soluções <span style="color: purple;" >Inovadoras</span></h2>
+        <a href="#">Ver mais...</a>
+    </section>
+
+    <footer>
+
+    </footer>
+    <script src="/script/script.js"></script>
 </body>
+
 </html>
