--- a/index.html
+++ b/index.html
@@ -260,15 +260,15 @@
                 </div>
                 <form class="contact-form">
                     <div class="form-group">
-                        <input type="text" placeholder="Seu nome" required>
+                        <input type="text" id="nomeSms" placeholder="Seu nome" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" placeholder="Seu email" required>
+                        <input type="email" id="emailSms" placeholder="Seu email" required>
                     </div>
                     <div class="form-group">
-                        <textarea placeholder="Sua mensagem" rows="5" required></textarea>
+                        <textarea id="smsSms" placeholder="Sua mensagem" rows="5" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
+                    <button type="submit" class="btn btn-primary" onclick="sendEmail()" >Enviar Mensagem</button>
                 </form>
             </div>
         </div>
