--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="hero-image">
             <div class="image-wrapper">
-                <img src="/static/programmer1.png" alt="Seth Lussueki - Developer">
+                <img src="/static/eu.jpg" alt="Seth Lussueki - Developer">
                 <div class="floating-elements">
                     <div class="floating-element" style="top: 10%; left: 5%;">
                         <i class="fab fa-js-square"></i>
@@ -108,9 +108,9 @@
                     <p>Designs responsivos, Animações e Flexbox</p>
                     <div class="skill-level">
                         <div class="level-bar">
-                            <div class="level-progress" style="width: 90%"></div>
+                            <div class="level-progress" style="width: 80%"></div>
                         </div>
-                        <span>90%</span>
+                        <span>80%</span>
                     </div>
                 </div>
                 <div class="skill-card">
@@ -121,9 +121,9 @@
                     <p>Manipulação do DOM, APIs, frameworks modernos, etc.</p>
                     <div class="skill-level">
                         <div class="level-bar">
-                            <div class="level-progress" style="width: 85%"></div>
+                            <div class="level-progress" style="width: 75%"></div>
                         </div>
-                        <span>85%</span>
+                        <span>75%</span>
                     </div>
                 </div>
                 <div class="skill-card">
@@ -134,9 +134,9 @@
                     <p>Desenvolvimento de aplicativos móveis, soluções para múltiplas plataformas.</p>
                     <div class="skill-level">
                         <div class="level-bar">
-                            <div class="level-progress" style="width: 80%"></div>
+                            <div class="level-progress" style="width: 60%"></div>
                         </div>
-                        <span>80%</span>
+                        <span>60%</span>
                     </div>
                 </div>
                 <div class="skill-card">
